--- a/www/styles/custom.css
+++ b/www/styles/custom.css
@@ -1,3 +1,4 @@
+.mb0 {margin-bottom:0px;}
 .homepage-cover p { color: rgba(255,255,255,0.8) !important; line-height: 24px;}
 .homepage-cover .read-cover { text-align:left; float:left;  }
 .gm-style-iw-d div { padding:10px 5px; max-height:300px; }
@@ -9,13 +10,14 @@
 .tab-content { padding:25px !important; font-size:13px; line-height:20px; }
 .tab-content ul { margin-top:15px; margin-bottom:15px; }
 .tab-content ul li { line-height:20px; }
+.tab-internary { padding-left: 0px !important; padding-right: 0px !important }
 
-.page-blog-title { width:100%; position:relative; float:left; }
+.page-blog-title { width: 100%; position: relative; float: left; }
 .page-blog-tags-wrap { margin-top:5px; position:relative; float:left; width:100%; }
 .page-blog-list .page-blog-tags { font-size:14px; font-weight:normal; }
 .page-blog-content p { font-size:12px; line-height:18px; }
 .place-page-link { color:#d20000; display:block; position:relative; float:left; width:100%; }
-.place-info { padding-bottom:10px; border-bottom:1px solid #eee; margin-bottom:10px; }
+.place-info { padding-bottom:10px; border-bottom:1px solid #eee; margin-bottom:10px; line-height: 22px; }
 
 .place-text { line-height:20px; color:#555 }
 .lh20 { line-height:20px !important; }
@@ -34,3 +36,52 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 .gmnoprint div {
     background:none !important;
 }
+
+.header-icon-4 { line-height:60px; font-size:2em;}
+
+.home-content { height: 100%; }
+.home-content-image { width: 100%; position: relative; z-index: 15; top: 0%; height: 50%; background-size:cover;}
+.home-content-icons { width: 100%; position: relative; z-index: 15; top: 0%; height: 50%; }
+.home-content-icon { width:50%; height:50%; float:left; text-align:center; display:flex; align-items:center }
+.home-content-icon i { display:block; font-size:50px; color:#d20000; margin:auto; margin-bottom:10px;}
+    .home-content-icon a { color:#222; text-transform:uppercase; font-weight:bold; font-size:18px; margin:auto;}
+    .home-content-icon-border-bottom { border-bottom:2px solid #eee}
+.home-content-icon-border-right { border-right: 2px solid #eee; }
+
+
+    .store-card-item { border-bottom: 3px solid #c0392b }
+.store-card-item em {height:30px; line-height:30px; border-radius:8px; top:15px; left:15px; }
+.store-card-item h3 a { cursor: pointer; color: white; font-size: 20px; }
+
+.tour-book { background:#d20000; color:white; text-transform:uppercase; padding:5px; text-align:center}
+
+.internary-left {width:25%; float:left}
+.internary-right { width:75%; background:white; margin-bottom:20px; float:left; padding:20px; border-left:4px solid #eee;}
+.internary-image { margin-right: 10px; }
+.internary-image img { border-radius:50%; border:2px solid white;}
+.internary i { color:#d20000}
+.internary-right div { padding-top:5px;}
+.internary-duration {}
+.internary-walk-icon { max-height: 22px; width: auto; margin: 15px auto 2px auto; }
+.internary-drive-icon { max-height: 22px; width: auto; margin: 15px auto 2px auto; margin-top: 8px; }
+.internary-title { font-size: 14px; line-height: 1.3; font-weight: 500; text-transform: uppercase; margin-bottom: 2px; }
+
+.sites-categories { }
+.sites-categories-content {padding:0px;}
+.sites-categories-images-wrap a { padding: 10px; text-align: center; color: #222; width: 33.3%; float: left; line-height: 1.2 }
+.sites-categories-images-wrap img { text-align:center; color:white; }
+.sites-categories-images-wrap span { margin-top:5px; display:inline-block}
+
+.sites-list { padding:20px; }
+    .sites-list .page-blog-tags { font-weight: normal; font-size: 13px; }
+    .sites-list .page-blog-tags-wrap { line-height:17px; margin-bottom:10px; }
+    .sites-list .page-blog-title { margin-top:10px; margin-bottom:0px; }
+
+.place-info-wrap p { line-height: 19px; margin-bottom: 30px; }
+
+.page-blog-content span { font-family: 'Roboto', sans-serif !important; text-align:left !important; font-size:12px !important; color:#555; line-height:16px;  }
+.page-blog-content { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 12px !important; color: #555; line-height: 16px; }
+.tour-main p { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 13px !important; color: #555 !important; line-height: 18px !important; }
+.tour-main p span { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 13px !important; color: #555 !important; line-height:18px !important; }
+
+.header-dark .header-logo { position: relative; height: 60px; margin-left: 60px; margin-right: 60px; line-height: 1.3; vertical-align: middle; color: white; padding-top: 14px; background:none; width:auto; margin-top:0px; text-align:center; }
