--- a/www/styles/custom.css
+++ b/www/styles/custom.css
@@ -16,8 +16,9 @@
 .page-blog-tags-wrap { margin-top:5px; position:relative; float:left; width:100%; }
 .page-blog-list .page-blog-tags { font-size:14px; font-weight:normal; }
 .page-blog-content p { font-size:12px; line-height:18px; }
-.place-page-link { color:#d20000; display:block; position:relative; float:left; width:100%; }
+.place-page-link { color:#d20000; display:block; position:relative; width:100%; }
 .place-info { padding-bottom:10px; border-bottom:1px solid #eee; margin-bottom:10px; line-height: 22px; }
+.place-info p { padding-bottom: 10px; border-bottom: 1px solid #eee; margin-bottom: 10px; line-height: 22px; }
 
 .place-text { line-height:20px; color:#555 }
 .lh20 { line-height:20px !important; }
@@ -55,7 +56,8 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 
 .tour-book { background:#d20000; color:white; text-transform:uppercase; padding:5px; text-align:center}
 
-.internary-left {width:25%; float:left}
+.internary { float:left; }
+.internary-left { width: 25%; float: left }
 .internary-right { width:75%; background:white; margin-bottom:20px; float:left; padding:20px; border-left:4px solid #eee;}
 .internary-image { margin-right: 10px; }
 .internary-image img { border-radius:50%; border:2px solid white;}
@@ -77,11 +79,13 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     .sites-list .page-blog-tags-wrap { line-height:17px; margin-bottom:10px; }
     .sites-list .page-blog-title { margin-top:10px; margin-bottom:0px; }
 
-.place-info-wrap p { line-height: 19px; margin-bottom: 30px; }
+.place-info-wrap p { line-height: 19px !important; margin-bottom: 30px; }
+.place-info-wrap p span { line-height: 19px; margin-bottom: 30px; }
 
 .page-blog-content span { font-family: 'Roboto', sans-serif !important; text-align:left !important; font-size:12px !important; color:#555; line-height:16px;  }
 .page-blog-content { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 12px !important; color: #555; line-height: 16px; }
 .tour-main p { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 13px !important; color: #555 !important; line-height: 18px !important; }
-.tour-main p span { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 13px !important; color: #555 !important; line-height:18px !important; }
+.tour-main p span, .tour-main span { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 13px !important; color: #555 !important; line-height:18px !important; }
 
 .header-dark .header-logo { position: relative; height: 60px; margin-left: 60px; margin-right: 60px; line-height: 1.3; vertical-align: middle; color: white; padding-top: 14px; background:none; width:auto; margin-top:0px; text-align:center; }
+.wrap-desc p, .wrap-desc p span, .wrap-desc span { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 13px !important; color: #555 !important; line-height: 18px !important; }
