--- a/www/styles/custom.css
+++ b/www/styles/custom.css
@@ -89,3 +89,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 
 .header-dark .header-logo { position: relative; height: 60px; margin-left: 60px; margin-right: 60px; line-height: 1.3; vertical-align: middle; color: white; padding-top: 14px; background:none; width:auto; margin-top:0px; text-align:center; }
 .wrap-desc p, .wrap-desc p span, .wrap-desc span { font-family: 'Roboto', sans-serif !important; text-align: left !important; font-size: 13px !important; color: #555 !important; line-height: 18px !important; }
+
+.contact-subtitle { color: #444; font-weight: bold; line-height: 23px !important; display: inline-block; }
+.haemus-logo { position: relative; float: left; width: 50px; margin-right: 15px; margin-bottom: 5px; }
+.about-img { vertical-align: middle; max-width: 70px; position: relative; float: left; margin-right: 5px; }
